Add steering committee

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
 - title: Previous Events
   file: null
 - title: Steering Committee
-  file: null
+  file: steering-committee.html
 - title: Bids
   file: null
 - title: Contacts
