Add bidding information

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@
 - title: Steering Committee
   file: steering-committee.html
 - title: Bids
-  file: null
+  file: bids.md
 - title: Contacts
   file: null
