Add list of previous events

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - title: Home
   file: index.html
 - title: Previous Events
-  file: null
+  file: previous-events.html
 - title: Steering Committee
   file: steering-committee.html
 - title: Bids
