--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: IS-EUD
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Organized as a biannual event, the International Symposium on End User
+  Development (IS-EUD) brings together researchers and practitioners from
+  industry and academia working in the field of EUD.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://iseud.net" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -35,6 +35,8 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-email-protect
+
+logo: /assets/images/logo.png
 
 # Exclude from processing.
 # The following items will not be processed, by default.
