--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Development (IS-EUD) brings together researchers and practitioners from
   industry and academia working in the field of EUD.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://iseud.net" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://is-eud.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
